hphp/test/zend/good/ext/standard/tests/class_object/get_parent_class_variation_002.php.expectf
*** Testing get_parent_class() : usage variations ***

Arg value 0 
bool(false)

Arg value 1 
bool(false)

Arg value 12345 
bool(false)

Arg value -2345 
bool(false)

Arg value 10.5 
bool(false)

Arg value -10.5 
bool(false)

Arg value 101234567000 
bool(false)

Arg value 1.07654321E-9 
bool(false)

Arg value 0.5 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value  
bool(false)

Arg value  
bool(false)

Arg value 1 
bool(false)

Arg value  
bool(false)

Arg value 1 
bool(false)

Arg value  
bool(false)

Arg value  
bool(false)

Arg value  
bool(false)

Arg value string 
bool(false)

Arg value String 
bool(false)
Error: 4096 - Object of class stdClass could not be converted to string, %s/get_parent_class_variation_002.php(66)

Arg value  
bool(false)
Done
